--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-import Layout from '../components/Layout.astro';
-import FeedbackForm from '../components/FeedbackForm.astro'
+import Layout from '@layouts/Layout.astro';
+import FeedbackForm from '@components/FeedbackForm.astro'
 ---
 <Layout>
   <FeedbackForm />
