--- a/frontend/src/pages/react.astro
+++ b/frontend/src/pages/react.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '@layouts/Layout';
+import Layout from '@layouts/Layout.astro';
 import FeedbackForm from '@components/FeedbackForm'
 ---
-<Layout client:load>
+<Layout>
   <FeedbackForm client:load />
 </Layout>
